[package]
name = "serenity-voice-model"
version = "0.2.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
description = "A Rust library for (de)serializing Discord Voice API gateway messages."
# readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml"]

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.4"
num-traits = "0.2"
serde_repr = "0.1.5"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
features = ["raw_value"]
version = "1"

[dev-dependencies]
criterion = "0.5"
serde_test = "1"

[[bench]]
name = "deserialisation"
path = "benches/de.rs"
harness = false
