[package]
name = "serenity-voice-model"
version = "0.3.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
description = "A Rust library for (de)serializing Discord Voice API gateway messages."
# readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml"]

documentation = "https://docs.rs/serenity"
homepage = "https://github.com/serenity-rs/serenity"
repository = "https://github.com/serenity-rs/serenity.git"
keywords = ["discord", "api"]
license = "ISC"
edition = "2021"
rust-version = "1.74"

[dependencies]
bitflags = "2.4"
num-traits = "0.2"
serde_repr = "0.1.5"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
features = ["raw_value"]
version = "1"

[dev-dependencies]
criterion = "0.5"
serde_test = "1"

[[bench]]
name = "deserialisation"
path = "benches/de.rs"
harness = false
